AIAI-345 SPIKE - Agent Profile - clean code